--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
 * {
 	font-family: Arial;
 	font-size: .96em;
-/*	color: white;
-	background-color: black;*/
+/*	color: green;
+	background-color: purple;*/
 }
 
 h1 {
@@ -44,13 +44,14 @@ a {
 
 #daily_snapshot {
 	text-align: center;
+	display: none;
 }
 
-#long-form {
+/*#long-form {
 	width: 40%;
 	padding-left: 30%;
 	padding-bottom: 10px;
-}
+}*/
 
 #buttons {
 	margin-top: 40px;
