--- a/index.css
+++ b/index.css
@@ -44,7 +44,9 @@ a {
 
 #daily_snapshot {
 	text-align: center;
-	display: none;
+	display: block;
+	width: 60%;
+	padding-left: 15%;
 }
 
 /*#long-form {
