--- a/css/normalize.css
+++ b/css/normalize.css
@@ -425,3 +425,84 @@ td,
 th {
   padding: 0;
 }
+* {
+  font-family: Arial;
+  font-size: .96em;
+/*  color: green;
+  background-color: purple;*/
+}
+
+h1 {
+  font-size: 1.9em;
+  text-align: center;
+  font-style: italic;
+}
+
+h2 {
+  font-size: 1em;
+  padding: 10px;
+  margin: 0px;
+}
+
+.info {
+  float: left;
+  width: 100%;
+  height: 50%;
+}
+
+.inner {
+  display: none;
+  width: 100%;
+}
+
+.news_item {
+  padding: 4px;
+  margin: 1px;
+  display: inline-block;
+  float: left;
+  width: 24%;
+  height: 70px;
+}
+
+a {
+  text-decoration: none;
+  font-weight: bold;
+}
+
+#daily_snapshot {
+  text-align: center;
+  display: none;
+}
+
+/*#long-form {
+  width: 40%;
+  padding-left: 30%;
+  padding-bottom: 10px;
+}*/
+
+#buttons {
+  margin-left:0px;
+  position:absolute;
+  display:block;
+  width:25%;
+}
+
+button {  
+  display:block;
+  text-align:center;
+  background-color:black;
+}
+
+button:focus {
+  outline-color: white;
+  border-bottom: 1px solid black;
+}
+
+#ongoing {
+  width:75%;
+  margin-left: 30%;
+}
+
+em {
+  text-decoration: underline;
+}
