--- a/index.css
+++ b/index.css
@@ -1,14 +1,17 @@
 * {
-	font-family: Arial;
-	font-size: .96em;
-/*	color: green;
-	background-color: purple;*/
+	font-family:'Raleway', sans-serif;
 }
-
+body {
+	background-image:url('images/greyzz.png');
+}
 h1 {
 	font-size: 1.9em;
 	text-align: center;
 	font-style: italic;
+	background-color:black;
+	color:white;
+	margin-bottom:0;
+	padding:10px;
 }
 
 h2 {
@@ -18,9 +21,7 @@ h2 {
 }
 
 .info {
-	float: left;
-	width: 100%;
-	height: 50%;
+	margin:auto;
 }
 
 .inner {
@@ -29,22 +30,27 @@ h2 {
 }
 
 .news_item {
-	padding: 4px;
-	margin: 1px;
+	margin: 10px;
 	display: inline-block;
-	float: left;
 	width: 24%;
-	height: 70px;
+	max-height:200px;
+	overflow:hidden;
 }
 
 a {
 	text-decoration: none;
 	font-weight: bold;
+	width:100%;
 }
+#button {
+	
+} 
 
 #daily_snapshot {
-	text-align: center;
+	margin:20px;
+	text-align: left;
 	display: none;
+	width:75%;
 }
 
 /*#long-form {
@@ -54,28 +60,32 @@ a {
 }*/
 
 #buttons {
-	margin-top: 40px;
-	text-align: center;
+	margin-left:0px;
+	display:inline-block;
+	background-color:black;
+	height:100%;
 }
 
-button {
-	background-color: white;
-	margin: 0px;
-	padding: 0px;
-	margin-bottom: 20px;
-	height: 50px;
-	width: 200px;
-	border: 0px;
+button {	
+	display:block;
+	color:white;
+	text-align:left;
+	border:0;
+	width:100%;
 }
 
 button:focus {
 	outline-color: white;
-	border-bottom: 1px solid black;
+	text-decoration: none;
+	border:0;
+}
+button:hover {
+	background-color:gray;
 }
 
-
 #ongoing {
-	padding-left: 100px;
+	display:inline-block;
+
 }
 
 em {
