--- a/index.css
+++ b/index.css
@@ -8,7 +8,6 @@ h1 {
 	font-size: 1.9em;
 	text-align: center;
 	font-style: italic;
-	margin-bottom:0;
 	padding:10px 10px 15px 10px;
 }
 
@@ -20,6 +19,8 @@ h2 {
 
 .info {
 	margin:auto;
+	margin-left: 40%;
+	width: 90%;
 }
 
 .inner {
@@ -31,8 +32,12 @@ h2 {
 	margin: 10px;
 	display: inline-block;
 	width: 24%;
-	max-height:200px;
-	overflow:hidden;
+	max-height:140px;
+	overflow: hidden;
+}
+
+#disasters .news_item {
+	height: 130px;
 }
 
 a {
@@ -43,11 +48,15 @@ a {
 
 #buttons .row button h6 {
 	vertical-align: middle;
+	height: 100%;
+	margin: 10px;
+	margin-left: 20px;
+	width: 100%;
 }
 
 #buttons .row:hover {
 	background-color:gray;
-} 
+}
 
 #daily_snapshot {
 	margin:20px;
@@ -56,18 +65,12 @@ a {
 	display:inline-block;
 }
 
-/*#long-form {
-	width: 40%;
-	padding-left: 30%;
-	padding-bottom: 10px;
-}*/
-
 #buttons {
 	margin-left:0px;
-	padding-top:20px;
 	display:inline-block;
 	background-color:black;
 	height:100%;
+	padding-top: 10px;
 }
 
 button {	
@@ -76,6 +79,10 @@ button {
 	text-align:left;
 	border:0;
 	width:100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	border-radius: 0;
 }
 
 button:focus {
@@ -87,9 +94,30 @@ button:focus {
 
 #ongoing {
 	display:inline-block;
-
+	margin: 0;
 }
 
 em {
 	text-decoration: underline;
+}
+
+header {
+	background-color: #383838;
+	color: white;
+	font-size: 2em;
+	text-transform: capitalize;
+}
+
+#buttons .row button:hover {
+	background-color: #bfbfbf;
+	color: white;
+}
+
+#beginner {
+	background-color: gray;
+	color: white;
+}
+
+h6 {
+	color: white;
 }
