--- a/index.css
+++ b/index.css
@@ -1,26 +1,12 @@
 * {
-	font-family:'Raleway', sans-serif;
+	font-family:'Karla', monospace;
 }
 body {
-	background-image:url('images/greyzz.png');
-}
-h1 {
-	font-size: 1.9em;
-	text-align: center;
-	font-style: italic;
-	padding:10px 10px 15px 10px;
 }
 
-h2 {
-	font-size: 1em;
-	padding: 10px;
-	margin: 0px;
-}
+h1, h2, h3, h5, h6 {
+	font-family: 'Roboto Mono', monospace;
 
-.info {
-	margin:auto;
-	margin-left: 40%;
-	width: 90%;
 }
 
 .inner {
@@ -32,7 +18,8 @@ h2 {
 	margin: 10px;
 	display: inline-block;
 	width: 24%;
-	max-height:140px;
+	min-height:150px;
+	max-height:200px;
 	overflow: hidden;
 }
 
@@ -48,17 +35,9 @@ a {
 
 #buttons .row button h6 {
 	vertical-align: middle;
-	height: 100%;
-	margin: 10px;
-	margin-left: 20px;
-	width: 100%;
 }
 
-#buttons .row:hover {
-	background-color:gray;
-}
-
-#daily_snapshot {
+#daily_snapshot, #yesterday_snapshot {
 	margin:20px;
 	text-align: left;
 	width:75%;
@@ -66,23 +45,29 @@ a {
 }
 
 #buttons {
-	margin-left:0px;
-	display:inline-block;
-	background-color:black;
-	height:100%;
-	padding-top: 10px;
+	text-align:center;
+	width:100%;
 }
 
-button {	
-	display:block;
+.navbar {
+	background-color:rgba(255, 255, 255, 0.2);
+}
+
+#buttons:focus {
+	background-color:transparent;
+}
+
+#buttons button {	
+	display:inline;
 	color:white;
-	text-align:left;
+	text-align:center;
 	border:0;
-	width:100%;
 	height: 100%;
 	margin: 0;
 	padding: 0;
 	border-radius: 0;
+	margin-right:3eem;
+	margin-left:3em;
 }
 
 button:focus {
@@ -93,8 +78,12 @@ button:focus {
 }
 
 #ongoing {
-	display:inline-block;
-	margin: 0;
+	width:100%;
+	margin:auto;
+	text-align:center;
+}
+#ongoing-wars {
+	text-align:center;
 }
 
 em {
@@ -102,22 +91,32 @@ em {
 }
 
 header {
-	background-color: #383838;
+	background-image: url("images/nasa.jpg");
+	background-position:center;
+	background-size:cover;
 	color: white;
-	font-size: 2em;
-	text-transform: capitalize;
+	width:100%;
+	text-align:center;
+	padding-top:20px;
 }
-
-#buttons .row button:hover {
-	background-color: #bfbfbf;
-	color: white;
+header h1 {
+	font-size: 4em;
+	font-style: normal;
+	margin-top:0;
+	padding-top:10vrm;
 }
 
 #beginner {
-	background-color: gray;
 	color: white;
 }
 
 h6 {
 	color: white;
+}
+.fix {
+  position: fixed;
+}
+.navbar .fix {
+	margin-top:0;
+ 	color:black;
 }
