--- a/index.css
+++ b/index.css
@@ -69,10 +69,10 @@ a {
 	border:0;
 	height: 100%;
 	margin: 0;
-	padding: 0;
+	padding: 0px 8px;
 	border-radius: 0;
-	margin-right:3eem;
-	margin-left:3em;
+	margin-right:.5em;
+	margin-left:.5em;
 }
 
 button:focus {
@@ -153,4 +153,12 @@ p {
 
 #terrorlist1, #terrorlist2 {
 	display: none;
+}
+
+h5 {
+	font-size: 2.1em;
+}
+
+#button_zero h5 {
+	text-decoration: underline;
 }
