--- a/index.css
+++ b/index.css
@@ -6,7 +6,11 @@ body {
 
 h1, h2, h3, h5, h6 {
 	font-family: 'Roboto Mono', monospace;
+	font-weight: lighter;
+}
 
+strong {
+	font-weight: bolder;
 }
 
 .inner {
