--- a/index.css
+++ b/index.css
@@ -113,11 +113,12 @@ button:focus {
 }
 
 header {
-	background-image: url("images/nasa.jpg");
+	background-image: url("images/World_Night_Lights_Map.jpg");
 	background-position:center;
 	background-size:cover;
 	color: white;
 	width:100%;
+	height: 240px;
 	text-align:center;
 	padding-top:20px;
 	grid-column-start: 1;
@@ -126,8 +127,8 @@ header {
 header h1 {
 	font-size: 4em;
 	font-style: normal;
-	margin-top:0;
-	padding-top:10vrm;
+	margin-top: 35px;
+	/*padding-top:16vrm;*/
 }
 
 #beginner {
@@ -266,7 +267,7 @@ ul li ul li h6 {
 
 #buttons {
 	text-align: left;
-	background-color: #0d2b46;
+	background-color: #0e1355;;
 }
 
 #buttons-mobile {
